Fix zooming on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html, body {
     height: 100%;
     margin: 0;
     background: rgb(53, 50, 50);
+    touch-action: manipulation;
 }
 
 body {
@@ -145,6 +146,7 @@ body {
     height: 12%;
     top: 85%;
 }
+
 
 
 
